fix: evita risposte PONG spurie e rinnova icona app